--- a/force-app/main/default/pages/orgDependencies.page
+++ b/force-app/main/default/pages/orgDependencies.page
@@ -1,3 +1,14 @@
-<apex:page controller="">
-    <apex:canvasApp developerName="mycanvas" parameters="{!generateJSON}" />
+<apex:page >
+    <!-- <apex:canvasApp developerName="mycanvas" parameters="{!generateJSON}" /> -->
+
+    <apex:iframe id="backend" src="http://127.0.0.1:5500/index.html"/>
+
+    <script>
+        debugger;
+        const iframeEl = document.getElementById("backend");
+        const message = JSON.stringify({
+            data: "Anmol"
+        });
+        iframeEl.contentWindow.postMessage(message, "http://127.0.0.1:5500");
+    </script>
 </apex:page>
