--- a/force-app/main/default/pages/graphData.page
+++ b/force-app/main/default/pages/graphData.page
@@ -1,4 +1,4 @@
-<apex:page controller="OrgDependenciesCtrl" title="dependencies.gexf" contentType="application/xml"
+<apex:page controller="GraphDataCtrl" title="dependencies.gexf" contentType="application/xml"
            readOnly="true" showHeader="false" sidebar="false" cache="false">
 
     <gexf xmlns="http://www.gexf.net/1.2draft" version="1.2">
